--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -147,8 +147,11 @@
 \newcommand{\xdisk}{\mathsf{xdisk}}
 \newcommand{\GTor}{\mathsf{GTor}}
 \newcommand{\Tor}{\mathsf{Tor}}
-\newcommand{\MType}{\mathsf{MType}}
-\newcommand{\MTypen}{\MType^{[n]}}
+\newcommand{\MType}{\mathsf{Type_m}}
+\newcommand{\MTypen}{\Type_m^{[n]}}
+\newcommand{\rlz}{\re}
+\newcommand{\rlzn}{\re^{[n]}}
+\newcommand{\mrlzn}{\re_m^{[n]}}
 \newcommand{\GType}{\mathsf{GType}}
 \newcommand{\Topcat}{\mathsf{Top}}
 \newcommand{\Type}{\mathsf{Type}}
