draft for the week

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -16,7 +16,7 @@
 % changes package, and a bit more room on the right
 \usepackage{todonotes}
 \usepackage[commandnameprefix=ifneeded, todonotes={textsize=tiny}]{changes}
-\definechangesauthor[name=Greg, color=red]{Greg}
+\definechangesauthor[name=Greg, color=blue]{Greg}
 \setlength{\marginparwidth}{1in}
 \geometry{right=1.2in}
 
