--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -1,6 +1,6 @@
 \section{Vector fields}
 
-We\chcomment[id=Greg]{All new section} will again use the dimension structure of a marked presented manifold(\ref{def:marked_presented_manifold}) to construct vector fields on each skeleton. Let \( M:\simcomp \) be a combinatorial manifold and \( \mm\defeq \mrlzn(M) \) the corresponding marked presented manifold.
+We will again use the dimension structure of a marked presented manifold(\ref{def:marked_presented_manifold}) to construct vector fields on each skeleton. Let \( M:\simcomp \) be a combinatorial manifold and \( \mm\defeq \mrlzn(M) \) the corresponding marked presented manifold.
 
 \begin{mydef}
 \label{def:vector_field}
