--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
@@ -8,7 +8,7 @@ An \defemph{abstract simplicial complex \( M\defeq[M_0,\ldots,M_n] \) of dimensi
 
 \begin{mydef}
 \label{def:enumeration}
-An\chcomment[id=Greg]{New definition} \defemph{enumeration} for a simplicial complex of dimension \( n \) is a choice for each top-dimensional face \( f_i:M_n \) of a total ordering of its \( n+1 \) vertices, denoted \( f_{i,E}=[f_{i,1},\ldots,f_{i,n+1}] \). This is the same as an orientation plus a starting vertex. Additionally we impose a compatibility condition: when two \( n \)-faces \( f_1,f_2 \) share an \( n-1 \)-face \( e=\{x_1,\ldots,x_n\} \), the two total orders for \( e \) inherited from \( f_1 \) and \( f_2 \) differ by an odd permutation. Equivalently, \( f_1 \) and \( f_2 \) assign opposite orientations to \( e \). 
+An \defemph{enumeration} for a simplicial complex of dimension \( n \) is a choice for each top-dimensional face \( f_i:M_n \) of a total ordering of its \( n+1 \) vertices, denoted \( f_{i,E}=[f_{i,1},\ldots,f_{i,n+1}] \). This is the same as an orientation plus a starting vertex. Additionally we impose a compatibility condition: when two \( n \)-faces \( f_1,f_2 \) share an \( n-1 \)-face \( e=\{x_1,\ldots,x_n\} \), the two total orders for \( e \) inherited from \( f_1 \) and \( f_2 \) differ by an odd permutation. Equivalently, \( f_1 \) and \( f_2 \) assign opposite orientations to \( e \). 
 \end{mydef}
 
 \begin{mydef}
@@ -30,7 +30,7 @@ which attaches each \( k \)-simplex by taking the convex hull of the appropriate
 The collection of vertical maps on the right gives a sequence of inclusion maps of skeleta \( |M_0|\xrightarrow[]{i_1}|M_{\leq 1}|\xrightarrow[]{i_2}\cdots\xrightarrow[]{i_n}|M_{\leq n}|=|M| \).
 
 \begin{mydef}
-In an abstract simplicial complex \( M \) of dimension \( n \), the \defemph{link} of a vertex \( v \) is the \( n-1 \)-dimensional subcomplex containing every face \( m\in M_{n-1} \) such that \( v\notin m \) and \( m\cup v \) is an \( n \)-face of \( M \). We will call a total ordering of the link an \defemph{enumeration}, as we did for the faces.\chcomment[id=Greg]{Orientation of link}
+In an abstract simplicial complex \( M \) of dimension \( n \), the \defemph{link} of a vertex \( v \) is the \( n-1 \)-dimensional subcomplex containing every face \( m\in M_{n-1} \) such that \( v\notin m \) and \( m\cup v \) is an \( n \)-face of \( M \). We will call a total ordering of the link an \defemph{enumeration}, as we did for the faces.
 \label{def:link}
 \end{mydef}
 
@@ -78,7 +78,7 @@ A \defemph{combinatorial manifold} (or \defemph{combinatorial triangulation}) of
 
 In a 2-dimensional combinatorial manifold the link is a polygon. See Figure~\ref{fig:sphere_triangulation} for some examples of 2-dimensional combinatorial manifolds of genus 0, 1, and 3.
 
-A classical 1940 result of Whitehead, building on Cairn, states that every smooth manifold admits a combinatorial triangulation\cite{whitehead_triangulation}. So it appears reasonably well motivated to study this class of objects. See for example the classic book by Kirby and Siebenmann\cite{kirby_siebenmann}. \added[id=Greg]{There are important examples in four dimensions of topological manifolds that do not have any smoothness structure or triangulation. These will be out of reach of the theory we are building.}\chcomment[id=Greg]{New comment on 4 dims, combined figures}
+A classical 1940 result of Whitehead, building on Cairn, states that every smooth manifold admits a combinatorial triangulation\cite{whitehead_triangulation}. So it appears reasonably well motivated to study this class of objects. See for example the classic book by Kirby and Siebenmann\cite{kirby_siebenmann}. There are important examples in four dimensions of topological manifolds that do not have any smoothness structure or triangulation. These will be out of reach of the theory we are building.
 
 \begin{figure}[htbp]
 \centering
@@ -131,7 +131,7 @@ In dimension 2 we could fill in maps from \( C_3 \) into our higher type by addi
 \end{center}
 The types \( C_3 \) and \( \mm_1 \) are 1-types, \( \mm_2 \) is a 2-type, and the rest are sets. The map \( \partial_0 \) maps each pair \( (e, S^0) \) to the pair of points this edge connects. 
 
-\( \partial_1 \) \chcomment[id=Greg]{new ¶}maps each \( (f, C_3) \) to the triangle that this face bounds. How? \( C_3 \) is itself a pushout, so to map out of it we must map from the span \( \{v_1, v_2, v_3\}\leftarrow C_{3,1}\times S^0\rightarrow C_{3, 1} \). This amounts to a choice of three points and three connecting edges. We require these to be the image under \( M_0\to\mm_1 \) of the vertices inside the set-based face \( M_2 \) itself.
+\( \partial_1 \) maps each \( (f, C_3) \) to the triangle that this face bounds. How? \( C_3 \) is itself a pushout, so to map out of it we must map from the span \( \{v_1, v_2, v_3\}\leftarrow C_{3,1}\times S^0\rightarrow C_{3, 1} \). This amounts to a choice of three points and three connecting edges. We require these to be the image under \( M_0\to\mm_1 \) of the vertices inside the set-based face \( M_2 \) itself.
  
  The \( h_i \) are the proofs of commutativity, and the two squares are also both homotopy pushouts. Note that the pushouts could be re-expressed as HIT constructors.
 
@@ -165,17 +165,17 @@ Whereas in geometric realization we use both \( \Delta^i \) and \( \partial\Delt
 It's useful to define types that remember all or some of the data in these diagrams:
 
 \begin{mydef}
-Denote by \( \Typen \) the type of \defemph{presented types of dimension \( n \)}, which consist of a sequence \( \mm_0\to\mm_1\to\cdots\to\mm_n \) and the mere existence of \( M:\simcomp \) and maps \( \partial_i \), \( *_i \) and \( h_i \) as in the previous diagrams. \added[id=Greg]{The diagrams also provide a map \( \rlzn:\simcomp\to\Typen \) we call \defemph{presented realization}. If \( M \) is a combinatorial manifold then we call \( \rlzn(M) \) a \defemph{presented manifold}.}
+Denote by \( \Typen \) the type of \defemph{presented types of dimension \( n \)}, which consist of a sequence \( \mm_0\to\mm_1\to\cdots\to\mm_n \) and the mere existence of \( M:\simcomp \) and maps \( \partial_i \), \( *_i \) and \( h_i \) as in the previous diagrams. The diagrams also provide a map \( \rlzn:\simcomp\to\Typen \) we call \defemph{presented realization}. If \( M \) is a combinatorial manifold then we call \( \rlzn(M) \) a \defemph{presented manifold}.
 \end{mydef}
 
 The name ``presented type'' is inspired by von Raumer\cite{vonraumer_nonabelian}, where he uses such a structure in dimension 2 to construct double groupoids and crossed modules in type theory.
 
 \begin{mydef}
 \label{def:marked_presented_manifold}
-Denote\chcomment[id=Greg]{New notation \( \MTypen, \mrlzn \)} by \( \MTypen \) the type of \defemph{marked presented types of dimension \( n \)}, which consists of a complex \( M:\simcomp \) and maps \( \partial_i \), \( *_i \) and \( h_i \) as in the previous diagrams. We clearly have a forgetful map \( \MTypen\to\Typen \). \added[id=Greg]{The diagrams also provide a map \( \mrlzn:\simcomp\to\MTypen \) we call the \defemph{marked presented realization}. If \( M \) is a combinatorial manifold then we call \( \mrlzn(M) \) a \defemph{marked presented manifold}.}
+Denote by \( \MTypen \) the type of \defemph{marked presented types of dimension \( n \)}, which consists of a complex \( M:\simcomp \) and maps \( \partial_i \), \( *_i \) and \( h_i \) as in the previous diagrams. We clearly have a forgetful map \( \MTypen\to\Typen \). The diagrams also provide a map \( \mrlzn:\simcomp\to\MTypen \) we call the \defemph{marked presented realization}. If \( M \) is a combinatorial manifold then we call \( \mrlzn(M) \) a \defemph{marked presented manifold}.
 \end{mydef}
 
-The\chcomment[id=Greg]{reworded ¶} maps \( *_i:M_i\to\mm_i \) pick out vertices when \( i=0 \) and hub terms for each edge, face, and so on when \( i>1 \). Each of the higher faces has a hub and a family of paths joining the hub to the entire boundary. When we work with \( \MTypen \) we may access the vertices and faces, and the explicit paths inside the pushouts.
+The maps \( *_i:M_i\to\mm_i \) pick out vertices when \( i=0 \) and hub terms for each edge, face, and so on when \( i>1 \). Each of the higher faces has a hub and a family of paths joining the hub to the entire boundary. When we work with \( \MTypen \) we may access the vertices and faces, and the explicit paths inside the pushouts.
 
 Going forward we will stick with 2-dimensional complexes, where forming the link of a vertex gives us a map \( \mm_0\to\Gon \) exactly when the complex is a combinatorial manifold, which by Corollary~\ref{cor:gon} means we have a map \( \link:\mm_0\to\EMzo \). Extending this map to all of \( \mm \) and exploring what we obtain is the main purpose of this note.
 
